--- a/test/dummy/app/components/dummy/molecule/cards/small_component.sass
+++ b/test/dummy/app/components/dummy/molecule/cards/small_component.sass
@@ -68,3 +68,4 @@
   +media-breakpoint-down(sm)
     &__grid
       grid-template-columns: repeat(1, 1fr)
+      gap: map-get($spacers, bb)
